--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manjari&family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="content">
-        <div class="image">
-            <div class="logo">LOGO</div>
+        <div class="left">
+            <div class="logo-bar">
+                <img src="./odin.png" alt="odin-icon" class="logo-icon">
+                <h2>ODIN</h2>
+            </div>
         </div>
-        <div class="form-content">
-            aaaa
+        <div class="right">
+            <div class="intro-text">
+            <p>This is not a real online service! You know you need something
+                like this in your life to help you realize your deepest dreams.
+            </p>
+            <p>Sign up <em>now</em> to get started.</p>
+            <p>You <em>know</em> you want to.</p>
+            </div>
         </div>
     </div>
 </body>
