--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manjari&family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manjari&family=Poiret+One&family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="content">
@@ -20,11 +20,42 @@
         </div>
         <div class="right">
             <div class="intro-text">
-            <p>This is not a real online service! You know you need something
-                like this in your life to help you realize your deepest dreams.
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <p>Sign up <em>now</em> to get started.</p>
             <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form-content">
+                <form action="">
+                    <p>Let's do this!</p>
+                    <ul>
+                        <li>
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name" name="first-name"/>
+                        </li>
+                         <li>
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name"/>
+                        </li>
+                         <li>
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email"/>
+                        </li>
+                         <li>
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input type="text" id="phone-number" name="phone-number"/>
+                        </li>
+                        <li>
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password"/>
+                        </li>
+                        <li>
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm-password" name="confirm-password"/>
+                        </li>
+                    </ul>
+                </form>
             </div>
         </div>
     </div>
