Add all page elements

--- a/index.html
+++ b/index.html
@@ -26,36 +26,40 @@
             <p>Sign up <em>now</em> to get started.</p>
             <p>You <em>know</em> you want to.</p>
             </div>
-            <div class="form-content">
-                <form action="">
+            <div class="form-content"></div>
+                <form action="" id="form">
                     <p>Let's do this!</p>
                     <ul>
                         <li>
-                            <label for="first-name">FIRST NAME</label>
-                            <input type="text" id="first-name" name="first-name"/>
+                            <label for="first-name">FIRST NAME<span aria-label="required">*</span></label>
+                            <input type="text" id="first-name" name="first-name" required/>
                         </li>
                          <li>
-                            <label for="last-name">LAST NAME</label>
-                            <input type="text" id="last-name"/>
+                            <label for="last-name">LAST NAME<span aria-label="required">*</span></label>
+                            <input type="text" id="last-name" required/>
                         </li>
                          <li>
-                            <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email"/>
+                            <label for="email">EMAIL<span aria-label="required">*</span></label>
+                            <input type="email" id="email" name="email" required/>
                         </li>
                          <li>
                             <label for="phone-number">PHONE NUMBER</label>
-                            <input type="text" id="phone-number" name="phone-number"/>
+                            <input type="tel" id="phone-number" name="phone-number" pattern="\d+" minlength="5" maxlength="20"/>
                         </li>
                         <li>
-                            <label for="password">PASSWORD</label>
-                            <input type="password" id="password" name="password"/>
+                            <label for="password">PASSWORD<span aria-label="required">*</span></label>
+                            <input type="password" id="password" name="password" required/>
                         </li>
                         <li>
-                            <label for="confirm-password">CONFIRM PASSWORD</label>
-                            <input type="password" id="confirm-password" name="confirm-password"/>
+                            <label for="confirm-password">CONFIRM PASSWORD<span aria-label="required">*</span></label>
+                            <input type="password" id="confirm-password" name="confirm-password" required/>
                         </li>
                     </ul>
                 </form>
+                <div class="account">
+                    <button type="submit" form="form">Create Account</button>
+                    <p>Already have an account? <a href="">Log in</a></p>
+                </div>
             </div>
         </div>
     </div>
