Display message when passwords do not match

--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
                         <li>
                             <label for="password">PASSWORD<span aria-label="required">*</span></label>
                             <input type="password" id="password" name="password" required/>
+                            
                         </li>
                         <li>
                             <label for="confirm-password">CONFIRM PASSWORD<span aria-label="required">*</span></label>
                             <input type="password" id="confirm-password" name="confirm-password" required/>
                         </li>
                     </ul>
+                    <span class="password-match"></span>
                 </form>
                 <div class="account">
                     <button type="submit" form="form">Create Account</button>
