Add image sources

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <div class="content">
         <div class="left">
             <div class="logo-bar">
-                <img src="./odin.png" alt="odin-icon" class="logo-icon">
+                <a href="https://www.flaticon.com/free-icons/odin"><img src="./odin.png" alt="odin-icon" class="logo-icon"></a>
                 <h2>ODIN</h2>
+            </div>
+            <div class="photo-credit">
+                <span>© Photo by <a class ="photo-credit" href="https://unsplash.com/@moisamihai092?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mihai Moisa</a> on Unsplash.</span>
             </div>
         </div>
         <div class="right">
